# valu3s-ifarlab-sofware

./: .gitignore  LICENSE-MIT  README.md  collision_checking  ifarlab_w_robot.world  moveit_calibration  moveit_visual_tools  rs005l_ros  sick_visionary
mobile_manipulator/srvt_moveit/: CMakeLists.txt  package.xml  setup.py
mobile_manipulator/srvt_moveit/image_file/: image_file.txt
mobile_manipulator/srvt_moveit/image_file/right_rokos/tof_image/: 35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_09_27_42.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_15_49_19.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_08_-_15_29_42.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_09_-_16_32_28.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_13_24_00.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_18_08.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_25_32.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_31_02.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_45_31.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_52_10.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_57_01.pgm  35269_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_15_01_26.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_09_27_56.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_15_49_44.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_13_24_17.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_18_24.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_26_31.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_31_27.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_45_59.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_14_52_36.pgm  35270_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_15_01_59.pgm  35271_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_09_28_11.pgm  35271_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_02_-_15_50_00.pgm  35271_id_13M38_1_vehicle_ARKA_right_rokos_tof_image_2023_02_10_-_13_24_34.pgm  (+22 more)
mobile_manipulator/srvt_moveit/launch/: camera.launch  left_rokos_tf_launcher.launch  right_rokos_tf_launcher.launch  rokos_planning_execution.launch  rokos_spawner.launch  scene.launch  smach_viewer.launch  start_moveit.launch  start_rokos.launch  start_rokos_smach.launch  start_rokos_smach_realtime.launch  start_rokos_smach_simulation.launch  start_rokos_task_service.launch  start_simulation_system.launch  start_system.launch  trajectory_controller.launch
mobile_manipulator/srvt_moveit/moveit_task_log/: .~lock.35269_to_home.csv#  .~lock.352701_to_home.csv#  .~lock.home.csv#  000.csv  352691_to_home.csv  352692.csv  352701.csv  352701_to_home.csv  352702.csv  352702_to_home.csv  352712.csv  352712_to_home.csv  352721.csv  35273.csv  352731_to_home.csv  home.csv
mobile_manipulator/srvt_moveit/params/: Right_Rokos (copy).yaml  Right_Rokos copy.yaml  Right_Rokos.yaml  left_rokos_task.yaml  right_rokos_task copy.yaml  right_rokos_task.yaml  rokos_task.yaml  test.xml  test.yaml
mobile_manipulator/srvt_moveit/rviz/: left_rokos_rviz.rviz  right_rokos_rviz.rviz
mobile_manipulator/srvt_moveit/scripts/: class_image_saver.py  class_rokos.py  controller_move_plan_node.py  image_service_node.py  log_node.py  move_plan_node.py  move_plan_node_revised.py  moveit_plan_saver.py  path_plan_saver.py  rokos_left_smach_node.py  rokos_right_smach_node.py  rokos_right_smach_node_realtime.py  rokos_right_smach_node_simulation.py  rokos_smach_lib.py  rokos_smach_lib_realtime.py  rokos_smach_lib_simulation.py  status_publisher.py  task_log_node.py  task_service_node.py  xml_yaml.py
mobile_manipulator/srvt_moveit/scripts/path_planning_and_reading/: animate_plot.py  generating_joint_states.py  generating_trajectory_plan.py  trajectory_plot.py
sir_robot_ros_interface/sir_robot_ros_interface/: CMakeLists.txt  KawasakiRobotTestForLinux_v2.cpp  kawasakirobottestforlinuxontable_v1.cpp  package.xml
sir_robot_ros_interface/sir_robot_ros_interface/include/: KawasakiRS005LRobot.h  SIRConnection.h  SIRLinConnection.h  SIRLogger.h  SIRPacketPackager.h  SIRPacketParser.h  SIRPoseDB.h  SIRPoseQueueDB.h  SIRRobot.h  SIRRobotCommands.h  SIRRobotPacketPackager.h  SIRRobotPacketParser.h  SIRTypeDefs.h  SIRWinConnection.h  khi_ota_comm.h  khi_ota_comm_valu3s.h
sir_robot_ros_interface/sir_robot_ros_interface/include/sir_robot_ros_interface/: KawasakiRS005LRobot.h  SIRConnection.h  SIRLinConnection.h  SIRPacketPackager.h  SIRPacketParser.h  SIRPoseDB.h  SIRRobot.h
sir_robot_ros_interface/sir_robot_ros_interface/msg/: Poses.msg
sir_robot_ros_interface/sir_robot_ros_interface/scripts/: ros_service_client.py
sir_robot_ros_interface/sir_robot_ros_interface/src/: SIRLogger.cpp
sir_robot_ros_interface/sir_robot_ros_interface/src/SIRRobot/: KawasakiRS005LRobot.cpp  SIRConnection.cpp  SIRLinConnection.cpp  SIRPacketPackager.cpp  SIRPacketParser.cpp  SIRPacketTest.cpp  SIRPoseDB.cpp  SIRPoseQueueDB.cpp  SIRRobot.cpp  SIRRobotPacketPackager.cpp  SIRRobotPacketParser.cpp  SIRWinConnection.cpp
sir_robot_ros_interface/sir_robot_ros_interface/srv/: ManipulatorPose.srv  ManipulatorPose_ino.srv  ManipulatorPose_ino_2.srv
sir_robot_ros_interface/sir_robot_ros_interface/tests/: KawasakiRobotJointPublisher.cpp  KawasakiRobotTest.cpp  KawasakiRobotTestForLinux.cpp  KawasakiRobotTestForLinux_Valu3s.cpp  KawasakiRobotTestForLinux_Valu3s_ino.cpp  KawasakiRobotTestForLinux_Valu3s_ino_2.cpp  KawasakiRobotTestForLinux_Valu3s_ino_2_safetyStop.cpp  KawasakiRobotTestTrajectoryExecution.cpp  KawasakiRobot_safetyStop_test.cpp  RS005L_Controller_Node.cpp  SIRLinConnectionTest.cpp  SIRWinConnectionTestcpp.cpp  kawasaki_joints_real_to_sim.cpp  kawasaki_kinematics_tf.cpp  output.txt
valu3s_tools/: CMakeLists.txt  package.xml
(+186 files in other folders)
