<?xml version="1.0"?>
<package format="2">
  <name>srvt_moveit</name>
  <version>2.1.0</version>
  <description>The srvt_moveit package</description>

  <maintainer email="didem.ozupektas@inovasyonmuhendislik.com">Didem OZUPEK TAS</maintainer>
  <maintainer email="kerem.erdogmus@inovasyonmuhendislik.com">Alim Kerem ERDOGMUS</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sir_robot_ros_interface</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>sir_robot_ros_interface</build_export_depend>

  <exec_depend>sir_robot_ros_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
